--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "skotereact",
   "version": "2.0.0",
-  "homepage": "https://finalplace.org/mystrate/",
+  "homepage": "http://mystrata.jmbmalaysia.org/",
   "private": true,
   "dependencies": {
     "@fullcalendar/bootstrap": "^5.5.0",
