Add testing for changes is work in Laptop ?

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fullcalendar/interaction": "^5.5.0",
     "@fullcalendar/react": "^5.5.0",
     "@lourenci/react-kanban": "^2.1.0",
+    "@react-leaflet/core": "^1.0.2",
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
