add dashboard company, dashboard for cob and dashboard kptp

--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     "toastr": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=8000 && react-scripts start",
     "build": "react-scripts --max_old_space_size=8000 build",
     "lint": "eslint .",
     "format": "prettier --write \"**/*.{js,jsx,json,md,html,css,less,scss}\"",
