--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-dropzone": "^11.2.4",
     "react-dual-listbox": "^2.0.0",
     "react-facebook-login": "^4.1.1",
+    "react-feather": "^2.0.9",
     "react-flatpickr": "^3.10.6",
     "react-google-login": "^5.2.2",
     "react-i18next": "^11.8.5",
